added tlink as in transparent link

--- a/graph.css
+++ b/graph.css
@@ -57,6 +57,20 @@ line.link.wireless, .wireless {
   color:  blue;
 }
 
+line.tlink {
+  stroke-opacity: 0;
+}
+
+//might not be needed with opacity set to 0
+line.tlink.fastd, .fastd {
+  stroke: #d0d0d0;
+  color:  #d0d0d0;
+}
+line.tlink.wireless, .wireless {
+  stroke: #d0d0d0;
+  color:  #d0d0d0;
+}
+
 .ontop {
   z-index: 255;
   position: relative;
